force-app/main/default/objects/Cycle_c__c/Cycle_c__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Cycle Record Types</label>
</CustomObject>