force-app/main/default/objects/Cycle_c__c/fields/Egg_Freeze_Cycle_Recrd_Type_ID__c.field-meta.xml
<CustomField>
    <fullName>Egg_Freeze_Cycle_Recrd_Type_ID__c</fullName>
    <label>Egg Freeze Cycle Recrd Type ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>