force-app/main/default/objects/Cycle_c__c/fields/FET_Cycle_Record_Type_ID__c.field-meta.xml
<CustomField>
    <fullName>FET_Cycle_Record_Type_ID__c</fullName>
    <label>FET Cycle Record Type ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>