force-app/main/default/objects/Cycle_c__c/fields/Fresh_Egg_Donor_Cycle_Record_Type_ID__c.field-meta.xml
<CustomField>
    <fullName>Fresh_Egg_Donor_Cycle_Record_Type_ID__c</fullName>
    <label>Fresh Egg Donor Cycle Record Type ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>