force-app/main/default/objects/Cycle_c__c/fields/IUI_Cycle_Record_Type_ID__c.field-meta.xml
<CustomField>
    <fullName>IUI_Cycle_Record_Type_ID__c</fullName>
    <label>IUI Cycle Record Type ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>