force-app/main/default/objects/Cycle_c__c/fields/IVF_Cycle_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>IVF_Cycle_Record_Type__c</fullName>
    <label>IVF Cycle Record Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>