force-app/main/default/objects/Cycle_c__c/fields/Lab_Only_Cycle_Record_Type_ID__c.field-meta.xml
<CustomField>
    <fullName>Lab_Only_Cycle_Record_Type_ID__c</fullName>
    <label>Lab Only Cycle Record Type ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>